--- a/blocks/main.css
+++ b/blocks/main.css
@@ -1,52 +1,59 @@
+.main {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: #2a2c2f;
+    color: white;
+    padding: 0 92px 148px;
+  }
+
 .friends{
 display: flex;
 flex-direction: column;
 align-items: center;
-text-align: center;
 width: 100%;
 height: 100%;
-max-width: 830px;
+max-width: 732px;
 
+
+}
+.friends__container{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+ margin-bottom: 32px;
 }
 
 .friends__title{
-color: #ffff;
-width: 830px;
-height: 116px;
+margin: 0 0 20px 0;
+max-width: 828px;
 font-weight: 900;
 font-size: 54px;
 line-height: 58px;
-text-align: center;
+
 }
 
 .friends__text_first{
-    color: #ffff;
-    width: 737.78px;
-height: 68px;
-font-weight: 400;
-font-size: 24px;
-line-height: 34px;
-text-align: center;
+    font-size: 24px;
+    line-height: 34px;
+    margin: 0 0 9px 0;
 }
 
 .friends__text_second{
-    color: #ffff;
-    width: 732px;
+ width: 732px;
 height: 34px;
 font-weight: 400;
 font-size: 24px;
 line-height: 34px;
 text-align: right;
-text-align: center;
+
 }
 
 
 .friends__text_third{
-    color: #ffff;
-    width: 721.74px;
-height: 182px;
-font-weight: 400;
+ max-width: 720px;
 font-size: 16px;
 line-height: 26.08px;
-text-align: center;
+
 }
