--- a/pages/index.css
+++ b/pages/index.css
@@ -3,5 +3,5 @@
 @import url("../blocks/page.css");
 @import url("../blocks/header.css");
 @import url("../blocks/main.css");
-@import url("../blocks/about.css");
+@import url("../blocks/gallery.css");
 @import url("../blocks/footer.css");
