--- a/pages/index.css
+++ b/pages/index.css
@@ -4,4 +4,5 @@
 @import url("../blocks/header.css");
 @import url("../blocks/main.css");
 @import url("../blocks/gallery.css");
+@import url("../blocks/cities.css");
 @import url("../blocks/footer.css");
