--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -27,14 +27,10 @@
 }
 
 .footer__center_paragraph {
-  width: 100%;
-  height: 100%;
-  max-width: 280px;
-  max-height: 66px;
+  margin: 0;
   font-size: 18px;
   line-height: 22px;
-  text-align: center;
-  color: #ffffff;
+  font-weight: 400;
 }
 
 .footer__center_title {
