retirei max heigth para fixar no container

--- a/blocks/gallery.css
+++ b/blocks/gallery.css
@@ -3,7 +3,6 @@
   grid-template-columns: repeat(4, 1fr);
   gap: 16px;
   max-width: 1184px;
-  max-height: 442px;
   margin-top: 118px;
 }
 .gallery__image {
@@ -11,4 +10,14 @@
   height: 100%;
   max-width: 284px;
   max-height: 213px;
+}
+
+@media screen and (max-width: 1024px) {
+  .gallery {
+    grid-template-columns: repeat(2, 1fr);
+  }
+  .gallery__image {
+    max-width: 352px;
+    max-height: 264px;
+  }
 }
