--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -57,22 +57,12 @@
 }
 @media screen and (max-width: 1024px) {
   .footer {
-    padding: 46px 16px;
-  }
-
-  .footer__center_title {
-    width: 656px;
-    font-size: 72px;
-    line-height: 76px;
-    margin: 0 0 16px;
-  }
-  .footer__center_paragraph {
     margin: 0;
-    font-size: 14px;
-    line-height: 16px;
   }
-
-  .footer__copyrigth {
-    line-height: 14px;
+  .footer__image {
+    margin-bottom: 88px;
+  }
+  .footer__center {
+    padding: 246px 56px;
   }
 }
