--- a/blocks/header.css
+++ b/blocks/header.css
@@ -58,3 +58,27 @@
     filter: grayscale(1);
   }
 }
+
+@media screen and (max-width: 720px) {
+  .header {
+    padding: 20px 0 44px;
+  }
+  .header__title {
+    margin: 50.15px 0 60px;
+    font-size: 40px;
+    line-height: 44px;
+    max-width: 288px;
+  }
+  .header__text {
+    font-size: 16px;
+    line-height: 20px;
+    max-width: 288px;
+    margin-bottom: 40px;
+  }
+  .header__image {
+    width: 100%;
+    height: 100%;
+    filter: grayscale(1);
+    max-width: 320px;
+  }
+}
