--- a/blocks/gallery.css
+++ b/blocks/gallery.css
@@ -21,3 +21,14 @@
     max-height: 264px;
   }
 }
+
+@media screen and (max-width: 720px) {
+  .gallery {
+    grid-template-columns: repeat(1, 1fr);
+    gap: 12px;
+  }
+  .gallery__image {
+    width: 100%;
+    height: 100px;
+  }
+}
