--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -66,3 +66,31 @@
     padding: 246px 56px;
   }
 }
+
+@media screen and (max-width: 720px) {
+  .footer {
+    padding: 0 16px 38px;
+  }
+
+  .footer__center_title {
+    font-size: 32px;
+    line-height: 35px;
+    margin: 0 0 16px;
+  }
+  .footer__image {
+    width: 100%;
+    height: 254px;
+    margin: 0;
+  }
+  .footer__center {
+    padding: 46px 16px;
+  }
+  .footer__center_paragraph {
+    margin: 0;
+    font-size: 14px;
+    line-height: 16px;
+  }
+  .footer__copyrigth {
+    margin-top: 64px;
+  }
+}
