--- a/blocks/gallery.css
+++ b/blocks/gallery.css
@@ -26,10 +26,10 @@
   .gallery {
     grid-template-columns: repeat(1, 1fr);
     gap: 12px;
+    margin-top: 90px;
   }
   .gallery__image {
-    max-width: 288px;
     width: 100%;
-    height: 100px;
+    width: 100%;
   }
 }
