todas img alt to jpg

--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -10,7 +10,7 @@
   justify-content: center;
   align-items: center;
   background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),
-    url(../images/footer.png);
+    url(../images/footer.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   width: 100%;
